TS, Webpack, client-side export

--- a/WebUI/Views/Home/Friends.cshtml
+++ b/WebUI/Views/Home/Friends.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section scripts {
-    <script src="/friends.js"></script>
+    <script src="/friends.bundle.js"></script>
 }
 
 @section ToolbarContent
