--- a/WebUI/Views/Home/Groups.cshtml
+++ b/WebUI/Views/Home/Groups.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section scripts {
-    <script src="/groups.js"></script>
+    <script src="/groups.bundle.js"></script>
 }
 
 @section ToolbarContent
