--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -5,19 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - VkGraphBuilder</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"
-            integrity="sha512-XHDcSyqhOoO2ocB7sKOCJEkUjw/pQCJViP1ynpy+EGh/LggzrP6U/V3a++LQTnZT7sCQKeHRyWHfhN2afjXjCg=="
-            crossorigin="anonymous" referrerpolicy="no-referrer">
-        </script>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vivagraphjs/0.12.0/vivagraph.js"
             integrity="sha512-3tTesD60C/wb78n0v+VF0gQmyhhx9HUhvqomOHjxU2cxdONsdVUszz+5eNGsU1G9NYv/HDLpJ/ysXQmet+Ot7A=="
             crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="/DetailsPane.js"></script>
-    <script src="/NetworkGraph.js"></script>
-    <script src="/DataContext.js"></script>
-    <script src="/PageLocker.js"></script>
+    <script
+        async
+        defer
+        src="https://cdn.jsdelivr.net/npm/transliteration@2.1.8/dist/browser/bundle.umd.min.js"></script>
 
     <link rel="stylesheet" href="/main.css"/>
     <link rel="stylesheet" href="/Toolbar.css"/>
